fix:修改meta相關資訊

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta property="og:title" content="打地鼠" />
-	<meta property="og:description" content="每個洞裡都有一隻地鼠，內部設計使地鼠能上下移動，當遊戲開始時，地鼠會隨機從洞中冒出，遊戲的目標是點選地鼠，使地鼠回到洞中，以增加玩家的分數。" />
+	<meta property="og:title" content="HTML5 媒體播放器" />
+	<meta property="og:description" content="引用隨著 HTML5 所打造的開源媒體播放器 Video.js，支援 HTML5 和 Flash 影片播放。" />
 	<meta property="og:locale" content="zh_TW" />
 	<meta property="og:type" content="website" />
     <link href="https://vjs.zencdn.net/7.6.6/video-js.min.css" rel="stylesheet" />
-	<link href="https://unpkg.com/@videojs/themes@1/dist/fantasy/index.css" rel="stylesheet">
-    <title>打地鼠</title>
+    <link href="https://unpkg.com/@videojs/themes@1/dist/fantasy/index.css" rel="stylesheet">
+    <title>HTML5 媒體播放器</title>
 </head>
 
 <body>
