--- a/index.html
+++ b/index.html
@@ -26,3 +26,4 @@
     <script src="https://vjs.zencdn.net/7.6.6/video.min.js" defer></script>
     <script src="https://cdn.bootcss.com/video.js/7.6.6/lang/zh-TW.js" defer></script>
 </body>
+</html>
