feat:更新最新資料

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="引用隨著 HTML5 所打造的開源媒體播放器 Video.js，支援 HTML5 和 Flash 影片播放。" />
     <meta property="og:locale" content="zh_TW" />
     <meta property="og:type" content="website" />
-    <link href="https://vjs.zencdn.net/7.6.6/video-js.min.css" rel="stylesheet" />
+    <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
     <link href="https://unpkg.com/@videojs/themes@1/dist/fantasy/index.css" rel="stylesheet">
     <title>HTML5 媒體播放器</title>
 </head>
@@ -23,7 +23,7 @@
     </video>
     <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
     <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js" defer></script>
-    <script src="https://vjs.zencdn.net/7.6.6/video.min.js" defer></script>
-    <script src="https://cdn.bootcss.com/video.js/7.6.6/lang/zh-TW.js" defer></script>
+    <script src="https://vjs.zencdn.net/7.11.4/video.min.js" defer></script>
+    <script src="https://cdn.bootcss.com/video.js/7.11.4/lang/zh-TW.js" defer></script>
 </body>
 </html>
