--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta property="og:description" content="引用隨著 HTML5 所打造的開源媒體播放器 Video.js，支援 HTML5 和 Flash 影片播放。" />
     <meta property="og:locale" content="zh_TW" />
     <meta property="og:type" content="website" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://vjs.zencdn.net/7.18.1/video-js.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css" integrity="sha512-XWTTruHZEYJsxV3W/lSXG1n3Q39YIWOstqvmFsdNEEQfHoZ6vm6E9GK2OrF6DSJSpIbRbi+Nn0WDPID9O7xB2Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://vjs.zencdn.net/7.20.2/video-js.css" rel="stylesheet" />
     <link href="https://unpkg.com/@videojs/themes@1/dist/fantasy/index.css" rel="stylesheet">
     <title>HTML5 媒體播放器</title>
 </head>
@@ -26,7 +26,7 @@
     </div>
     <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
     <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js" defer></script>
-    <script src="https://vjs.zencdn.net/7.18.1/video.min.js" defer></script>
-    <script src="https://cdn.bootcss.com/video.js/7.18.1/lang/zh-TW.js" defer></script>
+    <script src="https://vjs.zencdn.net/7.20.2/video.min.js" defer></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/video.js/7.20.2/lang/zh-TW.min.js" defer></script>
 </body>
 </html>
