--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.2/css/bootstrap.min.css" integrity="sha512-CpIKUSyh9QX2+zSdfGP+eWLx23C8Dj9/XmHjZY2uDtfkdLGo0uY12jgcnkX9vXOgYajEKb/jiw67EYm+kBf+6g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
     <link href="https://unpkg.com/@videojs/themes@1/dist/fantasy/index.css" rel="stylesheet">
-    <title>HTML5 媒體播放器</title>
+    <title>guwno</title>
 </head>
 
 <body>
     <div class="container-fluid container-md mt-3 d-flex justify-content-center">
         <video id="my-video" class="video-js vjs-big-play-centered" controls preload="auto" width="640" height="360" poster="https://i.imgur.com/uoEehDZ.png" data-setup="{}">
-            <source src="video/Kamen Rider Black Movie Henshin Clip.mp4" type="video/mp4" />
+            <source src="https://peertube.su/static/streaming-playlists/hls/ec78aab6-7c41-44d1-b43c-ab69b78e2a4c/master.m3u8" type="application/x-mpegURL" />
             <p class="vjs-no-js">
                  請啟用 JavaScript 以便觀看影片，建議您更新瀏覽器以
                  <a href="https://videojs.com/html5-video-support/" target="_blank">支援 HTML5 影片</a>
