--- a/index.html
+++ b/index.html
@@ -1,32 +1,50 @@
-<!DOCTYPE html>
-<html lang="zh-TW">
+<!doctype html>
+<html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta property="og:title" content="HTML5 媒體播放器" />
-    <meta property="og:description" content="引用隨著 HTML5 所打造的開源媒體播放器 Video.js，支援 HTML5 和 Flash 影片播放。" />
-    <meta property="og:locale" content="zh_TW" />
-    <meta property="og:type" content="website" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.2/css/bootstrap.min.css" integrity="sha512-CpIKUSyh9QX2+zSdfGP+eWLx23C8Dj9/XmHjZY2uDtfkdLGo0uY12jgcnkX9vXOgYajEKb/jiw67EYm+kBf+6g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
-    <link href="https://unpkg.com/@videojs/themes@1/dist/fantasy/index.css" rel="stylesheet">
-    <title>HTML5 媒體播放器</title>
-</head>
+    <meta charset="UTF-8">
+    <title>CDNBye JWPlayer Demo</title>
+    <!-- CDNBye Plugin -->
+    <script src="//cdn.jsdelivr.net/npm/cdnbye@latest"></script>
+    <!-- JWPlayer Hlsjs Provider -->
+    <script src="//cdn.jsdelivr.net/npm/cdnbye@latest/dist/jwplayer.provider.hls.js"></script>
+    <!-- JW Player Builds -->
+    <script src="//ssl.p.jwpcdn.com/player/v/8.21.2/jwplayer.js"></script>
 
+    <style>
+        #demoplayer {
+            width: 100% !important;
+            height: 100vh !important;
+        }
+    </style>
+</head>
 <body>
-    <div class="container-fluid container-md mt-3 d-flex justify-content-center">
-        <video id="my-video" class="video-js vjs-big-play-centered" controls preload="auto" width="640" height="360" poster="https://static.wirtualnemedia.pl/media/top/movefederation655.png" data-setup="{}">
-            <source src="https://peertube.su/static/streaming-playlists/hls/ec78aab6-7c41-44d1-b43c-ab69b78e2a4c/master.m3u8" type="application/x-mpegURL" />
-            <p class="vjs-no-js">
-                 請啟用 JavaScript 以便觀看影片，建議您更新瀏覽器以
-                 <a href="https://videojs.com/html5-video-support/" target="_blank">支援 HTML5 影片</a>
-            </p>
-        </video>
-    </div>
-    <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
-    <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js" defer></script>
-    <script src="https://vjs.zencdn.net/7.20.3/video.min.js" defer></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/video.js/7.20.3/lang/zh-TW.min.js" defer></script>
+<body style="background:#000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" oncontextmenu=window.event.returnValue=false>
+<header></header>
+<center>
+    <div id="demoplayer"></div>
+</center>
+<script>
+    jwplayer.key = "uoW6qHjBL3KNudxKVnwa3rt5LlTakbko9e6aQ6VUyKQ=";
+    jwplayer('demoplayer').setup({
+        file: 'https://peertube.su/static/streaming-playlists/hls/ec78aab6-7c41-44d1-b43c-ab69b78e2a4c/master.m3u8',
+        autostart: true,
+        hlsjsConfig: {
+            debug: false,
+            // Other hlsjsConfig options provided by hls.js
+            p2pConfig: {
+                live: true,        // set false in vod mode
+                // announceLocation: 'hk',        // if using Hongkong tracker
+                // announceLocation: 'us',        // if using USA tracker
+                // Other p2pConfig options provided by CDNBye
+            }
+        },
+    });
+    jwplayer().on('play', function () {
+        jwplayer().hls.p2pEngine.on('stats', function ({totalHTTPDownloaded, totalP2PDownloaded}) {
+            // get totalHTTPDownloaded and totalP2PDownloaded here
+        })
+    })
+    //aHR0cHM6Ly9kaXNjb3JkLmdnL21vdmllc2NpdHk=
+</script>
 </body>
 </html>
