--- a/index.html
+++ b/index.html
@@ -1,50 +1,264 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>CDNBye JWPlayer Demo</title>
-    <!-- CDNBye Plugin -->
-    <script src="//cdn.jsdelivr.net/npm/cdnbye@latest"></script>
-    <!-- JWPlayer Hlsjs Provider -->
-    <script src="//cdn.jsdelivr.net/npm/cdnbye@latest/dist/jwplayer.provider.hls.js"></script>
-    <!-- JW Player Builds -->
-    <script src="//ssl.p.jwpcdn.com/player/v/8.21.2/jwplayer.js"></script>
+<link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'/>
+<meta content='width=device-width, initial-scale=1.0' name='viewport'/>
+<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes' name='viewport'/>
+<script src='//cdn.jsdelivr.net/clappr/latest/clappr.min.js'></script>
+<script src='//cdn.jsdelivr.net/clappr.level-selector/latest/level-selector.min.js' type='text/javascript'></script>
+<script src='https://cdn.jsdelivr.net/gh/clappr/dash-shaka-playback@latest/dist/dash-shaka-playback.js' type='text/javascript'></script>
+<script src='https://cdn.jsdelivr.net/clappr.chromecast-plugin/latest/clappr-chromecast-plugin.js'></script>
+<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' rel='stylesheet'/>
+<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
+<style id='page-skin-1' type='text/css'><!--
+div#HTML1 h3.title {
+display: none !important;
+}
+div#HTML1 ul li {
+padding: 10px;
+text-align: center;
+}
+a.quickedit {
+display: none !important;
+}
 
-    <style>
-        #demoplayer {
-            width: 100% !important;
-            height: 100vh !important;
-        }
-    </style>
+--></style>
+<link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=4JUdGzvrMFDWrUUwY3toJATSeNwjn54LkCnKBPRzDuhzi5vSepHfUckJNxRL2gjkNrSqtCoRUrEDAgRwsQvVCjZbRyFTLRNyDmT1a1boZVmedia=&#39;all&#39;' rel='stylesheet'/><noscript><link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=495675767910696916&amp;zx=2b6918b8-9b22-4615-a44f-23c0914b0173' rel='stylesheet'/></noscript>
+
 </head>
 <body>
-<body style="background:#000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" oncontextmenu=window.event.returnValue=false>
-<header></header>
-<center>
-    <div id="demoplayer"></div>
-</center>
+<style>
+.vcol.col-sm-10 {
+    width: 100% !important;
+}
+</style>
+<style>
+
+/* Fonts --------------*/ @font-face { font-family: 'sky'; font-weight: 4JUdGzvrMFDWrUUwY3toJATSeNwjn54LkCnKBPRzDuhzi5vSepHfUckJNxRL2gjkNrSqtCoRUrEDAgRwsQvVCjZbRyFTLRNyDmT1a1boZV'), url('https://www.fontstatic.com/fonts/sky/sky.woff') format('woff'); } @font-face { font-family: 'sky'; font-weight: 700; src: url('https://www.fontstatic.com/fonts/sky-bold/sky-bold.eot?#iefix'); src: local('Ř§Ů?ŘłŮ?Ř§ŘĄ ŘŤŮ?Ů?Ů?'), local('sky-bold'), url('https://www.fontstatic.com/fonts/sky-bold/sky-bold.woff') format('woff'); } @font-face { font-family: 'dubai'; font-weight: 4JUdGzvrMFDWrUUwY3toJATSeNwjn54LkCnKBPRzDuhzi5vSepHfUckJNxRL2gjkNrSqtCoRUrEDAgRwsQvVCjZbRyFTLRNyDmT1a1boZVurl('//www.fontstatic.com/fonts/dubai/dubai.woff') format('woff'); } @font-face { font-family: 'dubai'; font-weight: 700; src: url('//www.fontstatic.com/fonts/dubai-bold/dubai-bold.eot?#iefix'); src: local('ŘŻŘ¨Ů? ŘŤŮ?Ů?Ů?'), local('dubai-bold'), url('//www.fontstatic.com/fonts/dubai-bold/dubai-bold.woff') format('woff'); }
+.vcol1.col-sm-2 {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
+.ssmlfdd {
+    float: right;
+    width: 100%;
+    padding: 0px 10px 10px 10px;
+    text-align: center;
+}
+
+.dfds {
+    float: right;
+    width: 100%;
+    padding: 30px 10px;
+    font-size: initial;
+}
+body {
+    font-family: sky;
+}
+
+div#LinkList1 h2 {
+    color: #fff;
+}
+
+div#LinkList1 {
+    float: right;
+    width: 100%;
+}
+
+div#LinkList2 {
+    float: right;
+    width: 100%;
+}
+
+div#LinkList1 ul {
+    max-height:  300px;
+  /*  overflow: scroll;
+    overflow-x: hidden;
+*/
+}
+.widget-content ul {
+    width: 100%;
+    padding: 0;
+}
+div#LinkList1 ul {
+    width: 100%;
+    padding: 0;
+}
+
+h2 {}
+
+div#LinkList1 h2 {
+    text-align: center;
+    float: right;
+    width: 100%;
+}
+
+.widget-content {
+    float: right;
+    width: 100%;
+}
+.vcol1.col-sm-2 {
+    background: #3F51B5;
+    height: 100%;
+    padding: 15px;
+}
+.col-sm-9 {
+    height: 100%;
+}
+
+.col-sm-2 {
+    height: 100px;
+}
+
+.col-sm-10 {}
+
+.vcol {
+    height: 100%;
+    padding: 0;
+}
+
+.col-sm-2 {
+    position: relative;
+}
+</style>
+<div class='vcol col-sm-10'>
+<div class='main section' id='main'><div class='widget Blog' data-version='1' id='Blog1'>
+<style>
+a.col-md-2.btn.btn-default.btn-blockx {
+    width: 100%;
+    margin: 3px 0;
+}
+</style>
+<div class='player-container' id='player'></div>
+<title>
+freeacc.org
+</title>
 <script>
-    jwplayer.key = "uoW6qHjBL3KNudxKVnwa3rt5LlTakbko9e6aQ6VUyKQ=";
-    jwplayer('demoplayer').setup({
-        file: 'https://peertube.su/static/streaming-playlists/hls/ec78aab6-7c41-44d1-b43c-ab69b78e2a4c/master.m3u8',
-        autostart: true,
-        hlsjsConfig: {
-            debug: false,
-            // Other hlsjsConfig options provided by hls.js
-            p2pConfig: {
-                live: true,        // set false in vod mode
-                // announceLocation: 'hk',        // if using Hongkong tracker
-                // announceLocation: 'us',        // if using USA tracker
-                // Other p2pConfig options provided by CDNBye
-            }
-        },
-    });
-    jwplayer().on('play', function () {
-        jwplayer().hls.p2pEngine.on('stats', function ({totalHTTPDownloaded, totalP2PDownloaded}) {
-            // get totalHTTPDownloaded and totalP2PDownloaded here
-        })
-    })
-    //aHR0cHM6Ly9kaXNjb3JkLmdnL21vdmllc2NpdHk=
-</script>
-</body>
-</html>
+  var playerElement = document.getElementById('player');
+
+ var player = new Clappr.Player({
+     height: '100%',
+     width: '100%',
+     autoPlay: true,
+     mute: false,
+autoPlayVisible: 'partial',
+
+  watermark: 'https://i.imgur.com/zOV3Z2N.gif',
+  position: 'top-left',
+   watermarkLink: 'https://vehhty.tk',
+poster: '',
+
+
+
+
+     plugins: {
+         'core': [LevelSelector]
+     },
+     hlsjsConfig: {
+         xhrSetup: function(xhr, url) {
+             xhr.withCredentials = false;
+         }
+     },
+     playbackConfig: {
+         crossorigin: 'use-credentials'
+     }
+ });
+
+ player.attachTo(playerElement);
+
+ player.load({
+    
+/*
+  source: "pierdol sie guwniarzu",
+
+*/
+
+
+
+  source: "https://peertube.su/static/streaming-playlists/hls/8dd1934b-4e7b-4588-8669-cd86f4216c8c/master.m3u8",
+
+     mimeType: 'application/x-mpegURL'
+ });
+ player.play();
+    </script>
+</div></div>
+</div>
+<script language=JavaScript>
+	<!--
+	var message = "??";
+	///////////////////////////////////
+	function clickIE4() {
+		if(event.button == 2) {
+			alert(message);
+			return false;
+		}
+	}
+
+	function clickNS4(e) {
+		if(document.layers || document.getElementById && !document.all) {
+			if(e.which == 2 || e.which == 3) {
+				alert(message);
+				return false;
+			}
+		}
+	}
+	if(document.layers) {
+		document.captureEvents(Event.MOUSEDOWN);
+		document.onmousedown = clickNS4;
+	} else if(document.all && !document.getElementById) {
+		document.onmousedown = clickIE4;
+	}
+	document.oncontextmenu = new Function("alert(message);return false")
+		// -->
+	</script>
+	<script type="text/javascript">
+	function preventSelection(element) {
+		var preventSelection = false;
+
+		function addHandler(element, event, handler) {
+			if(element.attachEvent) element.attachEvent('on' + event, handler);
+			else
+			if(element.addEventListener) element.addEventListener(event, handler, false);
+		}
+
+		function removeSelection() {
+			if(window.getSelection) {
+				window.getSelection().removeAllRanges();
+			} else if(document.selection && document.selection.clear) document.selection.clear();
+		}
+
+		function killCtrlA(event) {
+			var event = event || window.event;
+			var sender = event.target || event.srcElement;
+			if(sender.tagName.match(/INPUT|TEXTAREA/i)) return;
+			var key = event.keyCode || event.which;
+			if(event.ctrlKey && key == 'A'.charCodeAt(0)) {
+				removeSelection();
+				if(event.preventDefault) event.preventDefault();
+				else event.returnValue = false;
+			}
+		}
+		addHandler(element, 'mousemove', function() {
+			if(preventSelection) removeSelection();
+		});
+		addHandler(element, 'mousedown', function(event) {
+			var event = event || window.event;
+			var sender = event.target || event.srcElement;
+			preventSelection = !sender.tagName.match(/INPUT|TEXTAREA/i);
+		});
+		addHandler(element, 'mouseup', function() {
+			if(preventSelection) removeSelection();
+			preventSelection = false;
+		});
+		addHandler(element, 'keydown', killCtrlA);
+		addHandler(element, 'keyup', killCtrlA);
+	}
+	preventSelection(document);
+	</script>
+	<script>
+	document.onkeydown = function(e) {
+		if(e.ctrlKey && (e.keyCode === 67 || e.keyCode === 86 || e.keyCode === 85 || e.keyCode === 117)) { //Alt+c, Alt+v will also be disabled sadly. 
+		}
+		return false;
+	};
+	</script>
