--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@ freeacc.org
      mute: false,
 autoPlayVisible: 'partial',
 
-  watermark: 'https://i.imgur.com/zOV3Z2N.gif',
+  watermark: 'https://i.imgur.com/IQBwF5A.png',
   position: 'top-left',
-   watermarkLink: 'https://vehhty.tk',
-poster: '',
+   watermarkLink: 'https://ogladamy.ml',
+poster: 'https://static.wirtualnemedia.pl/media/top/movefederation655.png',
 
 
 
