--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ poster: 'https://static.wirtualnemedia.pl/media/top/movefederation655.png',
 
 
 
-  source: "https://peertube.su/static/streaming-playlists/hls/8dd1934b-4e7b-4588-8669-cd86f4216c8c/master.m3u8",
+  source: "https://stream.konduit.live/main/FEU4WCLGTHCRHNZS_source/index.m3u8",
 
      mimeType: 'application/x-mpegURL'
  });
