--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ poster: 'https://static.wirtualnemedia.pl/media/top/movefederation655.png',
 
 
 
-  source: "https://stream.konduit.live/main/FEU4WCLGTHCRHNZS_source/index.m3u8",
+  source: "https://livestreams.flote.app:5443/flote/streams/b02fe300-8ccb-42f8-aaca-ada8b742aaeb.m3u8",
 
      mimeType: 'application/x-mpegURL'
  });
